--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ add_executable(tasbot_eyes main.c)
 
 target_link_libraries(tasbot_eyes gif)
 target_link_libraries(tasbot_eyes ws2811)
+target_link_libraries(tasbot_eyes m) #libm, screw you
