--- a/cmake-build-remote-host/Makefile
+++ b/cmake-build-remote-host/Makefile
@@ -67,10 +67,10 @@ RM = /usr/bin/cmake -E rm -f
 EQUALS = =
 
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = /home/pi/clion_tasbot_eyes
+CMAKE_SOURCE_DIR = /tmp/tmp.qcKuiEiVAA
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = /home/pi/clion_tasbot_eyes/cmake-build-remote-host
+CMAKE_BINARY_DIR = /tmp/tmp.qcKuiEiVAA/cmake-build-remote-host
 
 #=============================================================================
 # Targets provided globally by CMake.
@@ -99,9 +99,9 @@ edit_cache/fast: edit_cache
 
 # The main all target
 all: cmake_check_build_system
-	$(CMAKE_COMMAND) -E cmake_progress_start /home/pi/clion_tasbot_eyes/cmake-build-remote-host/CMakeFiles /home/pi/clion_tasbot_eyes/cmake-build-remote-host//CMakeFiles/progress.marks
+	$(CMAKE_COMMAND) -E cmake_progress_start /tmp/tmp.qcKuiEiVAA/cmake-build-remote-host/CMakeFiles /tmp/tmp.qcKuiEiVAA/cmake-build-remote-host//CMakeFiles/progress.marks
 	$(MAKE) $(MAKESILENT) -f CMakeFiles/Makefile2 all
-	$(CMAKE_COMMAND) -E cmake_progress_start /home/pi/clion_tasbot_eyes/cmake-build-remote-host/CMakeFiles 0
+	$(CMAKE_COMMAND) -E cmake_progress_start /tmp/tmp.qcKuiEiVAA/cmake-build-remote-host/CMakeFiles 0
 .PHONY : all
 
 # The main clean target
